Compatibility Upgrades - Java 17 - Spring 6.2.14 - logback 1.2.13 - httpclient 5.2.1 - jackson 2.17.2 - Clean up <> - Add final variable declerations - Add @NonNull methods - Add @Override - Remove unused imports - Change keyword format - Add @SurpressWarnings -- More need this or we need to add null protections - Add return of empty lists instead of returning nulls - Move to switch in salesforce error handling -